update, most functionality complete

--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Calculator</title>
+    <title>Cowculator</title>
 </head>
 <body>
-    <div id="header">
-        <h1>Calculator</h1>
-        <h4>You can always count on me.</h4>
-    </div>
+    
 
     <div id="calc-container" >
+        <div id="header">
+            <h1>Cowculator</h1>
+            <h4>You can always count on me</h4>
+        </div>
         <div id="display">
             <p id="current"></p>
         </div>
@@ -21,7 +22,7 @@
             <div class="button" id="seven">7</div>
             <div class="button" id="eight">8</div>
             <div class="button" id="nine">9</div>
-            <div class="button" id="del">del</div>
+            <div class="button" id="del">&#x2190;</div>
             <div class="button" id="clr">clr</div>
             <div class="button" id="four">4</div>
             <div class="button" id="five">5</div>
