--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     
-
+    <div id="horns"></div>
     <div id="calc-container" >
         <div id="header">
             <h1>Cowculator</h1>
-            <h4>You can always count on me</h4>
+            <h4>You can always cownt on me</h4>
         </div>
         <div id="display">
             <p id="current"></p>
@@ -43,6 +43,8 @@
             <div class="button" id="equals">=</div>
         </div>
     </div>
+
+    <audio id="moosic" src="./Cow-Mooing-C-www.fesliyanstudios.com.mp3"></audio>
 
     <div id="footer">
         <p>2022 Kasugaijin for <a href="https://theodinproject.com" target="_blank">The Odin Project</a>.</p>
