--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./media/style.css">
     <title>Cowculator</title>
 </head>
 <body>
@@ -19,19 +19,19 @@
             <p id="current"></p>
         </div>
         <div id="buttons">
-            <div class="button" id="seven">7</div>
-            <div class="button" id="eight">8</div>
-            <div class="button" id="nine">9</div>
+            <div class="button-number" id="seven">7</div>
+            <div class="button-number" id="eight">8</div>
+            <div class="button-number" id="nine">9</div>
             <div class="button" id="del">&#x2190;</div>
             <div class="button" id="clr">clr</div>
-            <div class="button" id="four">4</div>
-            <div class="button" id="five">5</div>
-            <div class="button" id="six">6</div>
+            <div class="button-number" id="four">4</div>
+            <div class="button-number" id="five">5</div>
+            <div class="button-number" id="six">6</div>
             <div class="button" id="plus">+</div>
             <div class="button" id="minus">-</div>
-            <div class="button" id="one">1</div>
-            <div class="button" id="two">2</div>
-            <div class="button" id="three">3</div>
+            <div class="button-number" id="one">1</div>
+            <div class="button-number" id="two">2</div>
+            <div class="button-number" id="three">3</div>
             <div class="button" id="multiply">*</div>      
             <div class="button" id="divide">/</div>
             
@@ -44,13 +44,13 @@
         </div>
     </div>
 
-    <audio id="moosic" src="./Cow-Mooing-C-www.fesliyanstudios.com.mp3"></audio>
+    <audio id="moosic" src="./media/Cow-Mooing-C-www.fesliyanstudios.com.mp3"></audio>
 
     <div id="footer">
         <p>2022 Kasugaijin for <a href="https://theodinproject.com" target="_blank">The Odin Project</a>.</p>
     </div>
 
-    <script src="./script.js">
+    <script src="./script/script.js">
     </script>
 </body>
 </html>
