--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <div class="button-number" id="four">4</div>
             <div class="button-number" id="five">5</div>
             <div class="button-number" id="six">6</div>
-            <div class="button" id="plus">+</div>
-            <div class="button" id="minus">-</div>
+            <div class="button-operator" id="plus">+</div>
+            <div class="button-operator" id="minus">-</div>
             <div class="button-number" id="one">1</div>
             <div class="button-number" id="two">2</div>
             <div class="button-number" id="three">3</div>
-            <div class="button" id="multiply">*</div>      
-            <div class="button" id="divide">/</div>
+            <div class="button-operator" id="multiply">*</div>      
+            <div class="button-operator" id="divide">/</div>
             
         </div>
         
